# simple-ssdp

./: Cargo.toml  README.md
src/: client.rs  http_helper.rs  http_helper_test.rs  lib.rs  service.rs  socket_helper.rs
tests/: client_service.rs
