[package]
name = "ssdp"
version = "0.1.0"
edition = "2021"
description = "A SSDP implementation"
repository = "https://github.com/MrFastDie/ssdp"
license = "MIT OR Apache-2.0"
keywords = ["broadcast", "ssdp", "upnp", "network", "discovery"]
authors = ["MrFastDie <daniel.hackbarth96@gmail.com>"]
readme = "README.md"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
httparse = "1.9.4"
log = "0.4.22"
